--- a/src/header.css
+++ b/src/header.css
@@ -14,9 +14,12 @@
 }
 
 .header .nav-blocks .nav-block {
+  transition: all 0.2s;
   cursor: pointer;
-  height: 5rem;
-  width: 5rem;
+  height: 7rem;
+  width: 7rem;
+  padding: 1em;
+  font-size: 1.2em;
   display: block;
   margin-right: 2em;
   background: #113f83;
@@ -24,7 +27,7 @@
   position: relative;
   text-align: center;
   line-height: 1.2em;
-  padding-top: 1.2em;
+  padding-top: 1.7em;
   vertical-align: middle;
 }
 
@@ -38,6 +41,7 @@
 }
 
 .header .nav-blocks .nav-block:after {
+  transition: all 0.2s;
   position: absolute;
   top: 50%;
   left: 100%;
@@ -56,6 +60,7 @@
 }
 .header .nav-blocks .nav-block:hover {
   background: #24559D;
+  text-decoration: none;
 }
 
 
@@ -73,7 +78,8 @@
 
 .header .logo img {
   margin-right: 1em;
-  max-height: 5em;
+  width: auto;
+  height: auto;
 }
 
 .header .logo .logo-text {
@@ -81,10 +87,14 @@
   display: flex;
   flex-direction: column;
 }
+
 .header .logo .logo-text h1 {
   font-weight: 300;
   margin-bottom: 0;
+  font-size: 5em;
+  margin-top: 0;
 }
+
 .header .logo .logo-text h1 em {
   font-style: normal;
   margin-right: -0.1em;
@@ -92,6 +102,7 @@
 }
 .header .logo .logo-text small {
   font-weight: 400;
+  font-size: 1.0em;
 }
 .header .logo .logo-text small strong {
   margin-right: 0.4em;
