update logo and match colors

--- a/src/app.css
+++ b/src/app.css
@@ -29,8 +29,7 @@ a {
 .slate-text { color: #113f83; }
 .slate-bg { background: #113f83; }
 
-.light-slate-bg { background: #24559D; }
-
+.light-slate-bg { background: #3f69a7; }
 /*
 animation: App-logo-spin infinite 20s linear;
 @keyframes App-logo-spin {
