--- a/src/home_page/resource_blocks.css
+++ b/src/home_page/resource_blocks.css
@@ -18,7 +18,7 @@
   background: #113f83;
   font-weight: 300;
   padding: 0.5em;
-  border-bottom: 8px solid #24559D;
+  border-bottom: 8px solid #3f69a7;
   color: white;
   margin-bottom: 0;
 }
