--- a/src/app.css
+++ b/src/app.css
@@ -5,6 +5,7 @@ body {
 }
 a {
   cursor: pointer;
+  color: #113f83;
 }
 
 .btn {
@@ -14,6 +15,7 @@ a {
 .btn-primary {
   background: #f27421 !important;
   border-color: #f27421 !important;
+  color: white !important;
 
 }
 .app {
@@ -30,6 +32,7 @@ a {
 .slate-bg { background: #113f83; }
 
 .light-slate-bg { background: #3f69a7; }
+
 /*
 animation: App-logo-spin infinite 20s linear;
 @keyframes App-logo-spin {
