--- a/src/layouts/default.css
+++ b/src/layouts/default.css
@@ -16,3 +16,10 @@
   white-space: normal;
   word-break: break-word;
 }
+.default-layout h2 {
+  margin-top: 1em;
+  margin-bottom: 0.5em;
+  font-weight: 500;
+  padding-bottom: 0.2em;
+  border-bottom: 2px solid #113f83;
+}
