--- a/src/search/map.css
+++ b/src/search/map.css
@@ -22,9 +22,7 @@
 }
 .geofocus-map .leaflet-container {
   display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
+  width: 100%;
+  overflow: hidden;
   height: 65vh;
 }
