--- a/src/resources/detail.css
+++ b/src/resources/detail.css
@@ -9,7 +9,7 @@
 }
 
 .resource-detail .publication {
-  float: right;  
+  float: right;
 }
 
 .resource-detail .content-types {
@@ -20,7 +20,7 @@
 
 .resource-detail .content-types .content-type > span:after {
   content: ' / ';
-  
+
 }
 
 .resource-detail .content-types .content-type > span:last-child:after {
@@ -36,7 +36,7 @@
 .resource-detail .publishers .publisher:after ,
 .resource-detail .authors .author:after {
   content: ', ';
-  
+
 }
 
 .resource-detail .publishers .publisher:last-child:after ,
@@ -47,4 +47,22 @@
 .resource-detail .subsection label {
   font-size: 1.5em;
   font-weight: 600;
+}
+
+
+.resource-detail .geofocus-map {
+  width: 100%;
+  padding: 0em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+.resource-detail img {
+  margin-bottom: 2em;
+}
+.resource-detail hr {
+  clear: both;
+  margin: 2em 0;
+}
+.resource-detail .geofocus-map .leaflet-container {
+  height: 200px;
 }
