adding norefer and preload carousel images

--- a/src/home_page/image_carousel.css
+++ b/src/home_page/image_carousel.css
@@ -2,6 +2,9 @@
   padding-right: 0 !important;
   padding-left: 0 !important;
 }
+.image-carousel .carousel-preload {
+  display: none;
+}
 .image-carousel .slide a ,
 .image-carousel .slide a:hover ,
 .image-carousel .slide a:active ,
