fixing the home page carousel image

--- a/src/home_page/image_carousel.css
+++ b/src/home_page/image_carousel.css
@@ -46,6 +46,10 @@
   background-position: center center;
   background-size: cover;
 }
+.image-carousel .slide.climate-change-data-slide .image {
+  background-position: right center;
+}
+
 .image-carousel .slide .content{
   position: absolute;
   left: 0;
