home page last details

--- a/src/home_page/image_carousel.css
+++ b/src/home_page/image_carousel.css
@@ -46,8 +46,10 @@
   background-position: center center;
   background-size: cover;
 }
+
 .image-carousel .slide.climate-change-data-slide .image {
   background-position: right center;
+  background-size: contain;
 }
 
 .image-carousel .slide .content{
