--- a/src/layouts/default.css
+++ b/src/layouts/default.css
@@ -23,3 +23,10 @@
   padding-bottom: 0.2em;
   border-bottom: 2px solid #113f83;
 }
+
+.default-layout .main h1 {
+    font-size: 4em;
+    font-weight: 600;
+    color: black;
+    margin-bottom: 0.3em;
+}
