--- a/src/home_page/image_carousel.css
+++ b/src/home_page/image_carousel.css
@@ -47,6 +47,9 @@
   background-size: cover;
 }
 
+.image-carousel .slide.climate-change-data-slide  {
+  padding: 100px;
+}
 .image-carousel .slide.climate-change-data-slide .image {
   background-position: right center;
   background-size: contain;
