--- a/src/search/facets.css
+++ b/src/search/facets.css
@@ -1,7 +1,7 @@
 .search-facets {
   order: 1;
-  flex: 1 1 0;
-  min-height: 500px;  
+  flex: 1.5 1 0;
+  min-height: 500px;
 
   flex-direction: column;
   justify-content: space-between;
@@ -10,7 +10,7 @@
 }
 
 .search-facets .controls {
-  margin-bottom: 1em;  
+  margin-bottom: 1em;
 }
 
 .search-facets h3  {
@@ -18,8 +18,9 @@
   font-weight: 500;
   font-size: 1em;
 }
-.search-facets ul  {
+.search-facets ul {
   padding: 0.2em 0 0.2em 0.8em;
+  margin-bottom: 0.0em;
 }
 .search-facets ul > li {
   display: block;
@@ -30,5 +31,6 @@
 .search-facets ul > li input {
   margin-right: 0.2em;
 }
-
-
+.search-facets .facet-group {
+  margin-bottom: 1em;
+}
