--- a/src/data/banner_data.css
+++ b/src/data/banner_data.css
@@ -3,10 +3,11 @@
   width: 100%;
 }
 
-.banner-data > a {
+.banner-data .img {
   flex: 0 1 60%;
+  margin-right: 2em;
 }
-.banner-data > a > img {
+.banner-data .img img {
   width: 100%;
   height: auto;
   border: 2px solid rgb(94,94,94);
