update slide 4 carousel homepage

--- a/src/home_page/image_carousel.css
+++ b/src/home_page/image_carousel.css
@@ -64,7 +64,10 @@
   background-position: right center;
   background-size: contain;
 }
-
+.image-carousel .slide.mvp-slide .image {
+  background-position: 75% center;
+  background-size: contain;
+}
 .image-carousel .slide.take-action-slide .image {
   background-position: center top;
 }
