--- a/src/home_page/image_carousel.css
+++ b/src/home_page/image_carousel.css
@@ -73,6 +73,7 @@
 }
 
 .image-carousel .slide .content{
+  text-shadow: 0px 0px 1px black;
   position: absolute;
   left: 0;
   bottom: 0;
@@ -135,3 +136,13 @@
   background: #113F83;
   border: 1px solid white;
 }
+
+@media(max-width:767px){
+  .image-carousel .slide .content{
+    padding: 4em;
+  }
+}
+@media(min-width:768px){
+}
+@media(min-width:992px){}
+@media(min-width:1200px){}
