--- a/src/home_page/image_carousel.css
+++ b/src/home_page/image_carousel.css
@@ -78,13 +78,13 @@
   left: 0;
   bottom: 0;
   top: 0;
-  padding: 6em;
+  padding: 6em 9em 6em 6em;
   color: white;
   background: #113f83; /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(to right, #113f83, rgba(94,94,94,0.0)); /* Standard syntax */
-  background: -o-linear-gradient(right, rgba(94,94,94,1.0), rgba(94,94,94,0.0)); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(right, rgba(94,94,94,1.0), rgba(94,94,94,0.0)); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(to right, #113f83, rgba(94,94,94,0.0)); /* Standard syntax */
+  background: -webkit-linear-gradient(to right, #113f83, rgba(17,63,131, 0.8) 80%, rgba(94,94,94,0.0)); /* Standard syntax */
+  background: -o-linear-gradient(right, rgba(94,94,94,1.0), rgba(17,63,131, 0.8) 80%, rgba(94,94,94,0.0)); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(right, rgba(94,94,94,1.0), rgba(17,63,131, 0.8) 80%, rgba(94,94,94,0.0)); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to right, #113f83, rgba(17,63,131, 0.8) 80%, rgba(94,94,94,0.0)); /* Standard syntax */
 }
 
 .image-carousel .crumbs {
