--- a/src/home_page.css
+++ b/src/home_page.css
@@ -5,7 +5,7 @@
   margin: 2em 0;
 }
 .home-page .resource-blocks {
-  margin-top: 4em;
+  margin-top: 50px;
 }
 .home-page .sectors {
   margin-top: 2em;
@@ -15,9 +15,9 @@
   margin: 4em 0;
 }
 
-.home-page .resource-blocks.take-actions h1 {
+.home-page .resource-blocks h1 {
   line-height: 1.3em;
-  height: 4em;
+  height: 3em;
 }
 
 .home-page .tag-line {
@@ -34,4 +34,15 @@
 
 .home-page .slide.slr-image .image {
   background-position-y: top;
+}
+
+.home-page .changes-images {
+}
+.home-page .changes-images .image {
+  background-position-y: top;
+  width: 100%;
+  max-width: 100%;
+  min-width: 100%;
+  height: 200px;
+  background-size: cover;
 }
