--- a/src/home_page/image_carousel.css
+++ b/src/home_page/image_carousel.css
@@ -34,8 +34,7 @@
   overflow: hidden;
   position: relative;
   transition: all 0.5s;
-  height: 65vh;
-  min-height: 400px;
+  height: 25em;
   max-height: 630px;
 }
 
@@ -78,7 +77,7 @@
   left: 0;
   bottom: 0;
   top: 0;
-  padding: 6em 9em 6em 6em;
+  padding: 3em 9em 3em 5em;
   color: white;
   background: #113f83; /* For browsers that do not support gradients */
   background: -webkit-linear-gradient(to right, #113f83, rgba(17,63,131, 0.8) 80%, rgba(94,94,94,0.0)); /* Standard syntax */
