--- a/src/home_page.css
+++ b/src/home_page.css
@@ -46,3 +46,118 @@
   height: 200px;
   background-size: cover;
 }
+
+.oneplusfour {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.oneplusfour div.img {
+  width: 60%;
+  background: blue;
+  background-position: center top;
+}
+.oneplusfour .img:after {
+  content: "";
+  display: block;
+  padding-bottom: 60%;
+}
+.oneplusfour .boxen {
+  display: block;
+  width: 38%;
+  float: right;
+}
+.oneplusfour .boxen .box {
+  float: left;
+  width: 50%;
+  position: relative;
+}
+.oneplusfour .boxen .box .content:after {
+  content: "";
+  display: block;
+  padding-bottom: 100%;
+}
+.oneplusfour .boxen .box .content h3 {
+  text-align: center;
+  font-size: 140%;
+}
+.oneplusfour .boxen .box .content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+
+}
+
+.oneplusfour .boxen .box .background {
+  background-size: cover;
+  position: absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  opacity: 0.2;
+}
+.oneplusfour .boxen .box:first-child > div {
+  margin: 0 5% 5% 0;
+}
+.oneplusfour .boxen .box:nth-child(2) > div {
+  margin: 0 0 5% 5%;
+}
+.oneplusfour .boxen .box:nth-child(3) > div {
+  margin: 5% 5% 0 0;
+}
+.oneplusfour .boxen .box:nth-child(4) > div {
+  margin: 5% 0 0 5% ;
+}
+
+/* > 1024 */
+@media(min-width:1025px){
+}
+/* < 1024 */
+@media(max-width:1024px){
+  .oneplusfour {
+    flex-direction: column;
+  }
+  .oneplusfour div.img {
+    width: 100%;
+    max-height: 200px;
+  }
+  .oneplusfour div.boxen {
+    width: 100%;
+  }
+  .oneplusfour .boxen .box {
+    width: 25%;
+  }
+  .oneplusfour .boxen .box h3 {
+    font-size: 125%;
+  }
+  .oneplusfour .boxen .box > div {
+    margin: 5% !important;
+  }
+}
+/* < 1024 */
+@media(max-width:768px){
+  .oneplusfour .boxen {
+    width: 100%;
+  }
+  .oneplusfour {
+    flex-direction: column;
+  }
+  .oneplusfour div.img {
+    display: none;
+  }
+  .oneplusfour div.boxen {
+    width: 100%;
+  }
+  .oneplusfour .boxen .box {
+    width: 50%;
+  }
+  .oneplusfour .boxen .box h3 {
+    font-size: 125%;
+  }
+  .oneplusfour .boxen .box > div {
+    margin: 4% !important;
+  }
+
+}
