--- a/src/home_page.css
+++ b/src/home_page.css
@@ -70,12 +70,13 @@
 .oneplusfour .boxen .box {
   float: left;
   width: 50%;
+  height: 50%;
   position: relative;
-}
-.oneplusfour .boxen .box .content:after {
-  content: "";
-  display: block;
-  padding-bottom: 100%;
+  display: flex;
+  vertical-align: middle;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 .oneplusfour .boxen .box .content h3 {
   text-align: center;
@@ -87,7 +88,8 @@
   justify-content: center;
   align-items: center;
   position: relative;
-
+  width: 100%;
+  height: 100%;
 }
 
 .oneplusfour .boxen .box .background text {
@@ -150,6 +152,8 @@
   }
   .oneplusfour .boxen .box {
     width: 25%;
+    height: 200px;
+    margin-bottom: 40px;
   }
   .oneplusfour .boxen .box h3 {
     font-size: 125%;
