--- a/src/app.css
+++ b/src/app.css
@@ -4,6 +4,9 @@ body {
   font-family: 'Raleway', sans-serif;
   min-width: 480px;
 }
+.full-width {
+  width: 100%;
+}
 .image-credit {
   font-size: 0.7rem;
   padding: 0.5em;
