--- a/src/header.css
+++ b/src/header.css
@@ -1,3 +1,17 @@
+.header-wrap .fa-bars {
+  font-weight: 300;
+  font-size: 2em;
+  color: #113f83;
+  vertical-align: middle;
+  position: relative;
+  top: -8px;
+}
+.header-wrap .controls {
+  float: right;
+  display: flex;
+  vertical-align: middle;
+  margin-top: 2.5em;
+}
 .header-wrap a:hover ,
 .header-wrap a:active ,
 .header-wrap a:focus ,
@@ -85,7 +99,7 @@
 .header .logo img {
   margin-right: 1em;
   width: auto;
-  height: 7rem;
+  height: 4rem;
 }
 
 .header .logo .logo-text {
@@ -97,7 +111,7 @@
 .header .logo .logo-text h1 {
   font-weight: 300;
   margin-bottom: 0;
-  font-size: 4em;
+  font-size: 2.4em;
   margin-top: 0;
 }
 .header .logo .logo-text h1 span {
@@ -120,51 +134,9 @@
   font-weight: 700;
 }
 
-.header-wrap .subnav {
-  background: #5e5e5e;
-  color: white;
-  padding-top: 1em;
-  margin: 1em 0;
+.header .logo {
+  float: left;
 }
-.header-wrap .subnav .nav-item {
-  font-size: 1.5em;
-  color: white;
-}
-.header-wrap .subnav .nav-item a,
-.header-wrap .subnav .nav-item a:hover ,
-.header-wrap .subnav .nav-item a:active ,
-.header-wrap .subnav .nav-item a:focus ,
-.header-wrap .subnav .nav-item a:visited {
-  color: white !important;
-  text-decoration: none !important;
-}
-.header-wrap .subnav .nav-item {
-  border-bottom: 0.5em solid transparent;
-  padding-bottom: 0em;
-}
-.header-wrap .subnav .nav-item.active:hover ,
-.header-wrap .subnav .nav-item.active {
-  border-bottom-color: white;
-}
-.header-wrap .subnav .nav-item:hover {
-  border-bottom-color: #333;
-}
-.header-wrap .subnav .search-bar {
-  position: relative;
-  top: -0.5em;
-  display: flex;
-  flex: 0 0 38%;
-  flex-basis: 400px;
-  background: transparent;
-  padding: 0.5em;
-}
-.header-wrap .subnav > .container {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
 .header-wrap .eea-banner {
   display: block;
   height: 95px;
@@ -200,3 +172,84 @@
 .eea-icons-permits:before{content:"\f104"}
 .eea-icons-program-data:before{content:"\f105"}
 .eea-icons-stateseal:before{content:"\f106"}
+
+.mega-menu {
+  position: absolute;
+  top: 86px;
+  left: 0;
+  right: 0;
+  z-index: 101;
+  background: rgba(240,240,240,0.9);
+  border: 1px solid #113f83;
+  padding: 2em 4em;
+}
+.mega-menu header h1 {
+  font-weight: 400;
+  color: #113f83;
+  font-size: 2rem;
+  margin-bottom: 1em;
+}
+
+.mega-menu-toggle  {
+  position: relative;
+}
+
+.mega-menu-toggle .down-triangle {
+  font-size: 3em;
+  position: absolute;
+  bottom: -30px;
+  z-index: 102;
+  left: 0;
+  text-align: center;
+  right: 0;
+}
+.mega-menu-toggle .down-triangle .triangle {
+  color: #113f83;
+  border-top: 15px solid #113f83;
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  border-bottom: 15px solid transparent;
+  width: 0;
+  height:0;
+  display: block;
+}
+
+.mega-menu hr {
+  border-top: 5px solid #f27421;
+  margin: 0 -5px;
+
+}
+.mega-menu h2 {
+  color: #113f83;
+  font-weight: 700;
+  font-size: 1.5em;
+}
+
+.mega-menu h3 {
+  margin: 20px 0;
+}
+.mega-menu h3 ,
+.mega-menu h3 > a {
+  color: #113f83;
+  font-weight: 700;
+  font-size: 1.0em;
+}
+
+.mega-menu li {
+  list-style-type: none;
+  position: relative;
+  padding-left: 5px;
+  margin-top: 12px;
+}
+
+.mega-menu ul {
+  padding-inline-start: 8px;
+}
+.mega-menu li:before {
+  content: "\25BA \0020";
+  font-size: 14px;
+  position: absolute;
+  top: 5px;
+  left: -10px;
+  color: #f27421;
+}
