--- a/src/footer.css
+++ b/src/footer.css
@@ -21,12 +21,15 @@
   text-align: center;
 }
 .footer .logos img.primary-logo {
-  max-height: 125px;
-  height: 125px;
+  width: 100%;
 }
 .footer .logos img {
   margin: 1em;
-  max-height: 50px;
+  display: block;
+  max-width:85px;
+  max-height:85px;
+  width: auto;
+  height: auto;
 }
 
 .footer .footer-content .row{
@@ -37,7 +40,6 @@
 }
 
 .footer .footer-content .content {
-  max-width: 50%;
   display: flex;
   flex-direction: column;
   margin-left: auto;
