--- a/src/header.css
+++ b/src/header.css
@@ -23,6 +23,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-bottom: 1em;
 }
 
 .header .nav-blocks {
@@ -181,7 +182,7 @@
   z-index: 101;
   background: rgba(240,240,240,0.9);
   border: 1px solid #113f83;
-  padding: 2em 4em;
+  padding: 1em 4em;
 }
 .mega-menu header h1 {
   font-weight: 400;
@@ -192,12 +193,26 @@
 
 .mega-menu-toggle  {
   position: relative;
+  flex-direction: column;
+  text-align: center;
+  display: flex;
+  margin: 0;
+  top: -6px;
+}
+.mega-menu-toggle label {
+  text-transform: uppercase;
+  position: relative;
+  top: -8px;
+  color: #113f83;
+}
+.mega-menu-toggle label.hide {
+  opacity: 0;
 }
 
 .mega-menu-toggle .down-triangle {
   font-size: 3em;
   position: absolute;
-  bottom: -30px;
+  bottom: -60px;
   z-index: 102;
   left: 0;
   text-align: center;
@@ -211,7 +226,7 @@
   border-bottom: 15px solid transparent;
   width: 0;
   height:0;
-  display: block;
+  display: inline-block;
 }
 .mega-menu .tool-n-data-col {
     flex: 0 0 12%;
