--- a/src/home_page/resource_blocks.css
+++ b/src/home_page/resource_blocks.css
@@ -1,3 +1,8 @@
+
+.home-page .resource-blocks h1 {
+  line-height: 1.3em;
+  height: 3.6em;
+}
 .resource-blocks .row {
   padding-right: 0;
   padding-left: 0;
@@ -34,7 +39,7 @@
 }
 
 .resource-blocks .block h1 {
-  font-size: 1.4em;
+  font-size: 1.3em;
 }
 
 .resource-blocks .block img {
