--- a/src/header.css
+++ b/src/header.css
@@ -4,7 +4,6 @@
   color: #113f83;
   vertical-align: middle;
   position: relative;
-  top: -8px;
 }
 .header-wrap .controls {
   float: right;
@@ -197,14 +196,14 @@
   text-align: center;
   display: flex;
   margin: 0;
-  top: -6px;
+  top: -24px;
 }
 .mega-menu-toggle label {
   text-transform: uppercase;
   position: relative;
-  top: -8px;
   color: #113f83;
   font-size: 0.45em;
+  margin-bottom: 0;
 }
 .mega-menu-toggle label.hide {
   opacity: 0;
@@ -213,7 +212,7 @@
 .mega-menu-toggle .down-triangle {
   font-size: 3em;
   position: absolute;
-  bottom: -70px;
+  bottom: -94px;
   z-index: 102;
   left: 0;
   text-align: center;
